04-enterprise-observability-platform/manifests/networking/networkpolicy-allow-observability.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-observability-ingress
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: enterprise-observability
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 9093
